# pointcloud_to_2dmap_ros

./: CMakeLists.txt  README.md  package.xml
launch/: pointcloud_to_2dmap.launch
src/: pointcloud_to_2dmap_ros.cpp
