<?xml version="1.0"?>
<package format="2">
  <name>pointcloud_to_2dmap_ros</name>
  <version>0.1.0</version>
  <description>A package for converting point cloud data to a 2D map</description>
  <maintainer email="laiyichengyuntech@gmail.com">Lai Yi-Cheng</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pcl_ros</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
